# qt-function-plotter

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  calculate.cpp  calculate.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp  mainwindow.ui  plot_settings.cpp  plot_settings.h  plot_settings.hpp  qcustomplot.cpp
src/qcustomplot/: CMakeLists.txt
tests/: CMakeLists.txt  plot_settings_test.cpp
